# Memoria

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.example.yaml  docker-compose.yml  memoria.example.json  mkdocs.yml  openapi.json  openapi_1.yaml  pyproject.toml  requirements-cluster.txt  requirements-dev.txt  requirements-sync.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: change_request.md
.github/workflows/: ci.yml  core-memory-qa.yml  evaluation.yml
configurations/: personal_default.yaml  personal_with_postgres.yaml  team_experimental.yaml
demos/personal_diary_assistant/: README.md  demo.py  diary_assistant.py  requirements.txt  streamlit_app.py
demos/researcher_agent/: README.md  app.py  requirements.txt  researcher.py
demos/smart_shopping_assistant/: README.md  smart_shopping_demo.py
demos/travel_planner/: README.md  app.py  requirements.txt  travel_agent.py
docs/: contributing.md  database-tables.md  hypertext_graph.schema.json  index.md
docs/admin/: policy_console_guide.md  policy_console_runbook.md  policy_ui_mockups.md  post_ga_incident_template.md
docs/advanced_usage/: ga-launch-announcement.md  phased-guides.md
docs/cli/: index.md
docs/compliance/: gdpr_evidence_pack_template.json  gdpr_evidence_pack_template.md  sox_evidence_pack_template.json  sox_evidence_pack_template.md
docs/configuration/: evaluation-suites.md  settings.md  single-file.md
docs/contributing/: governance-pr-examples.md  secure-self-hosted-runners.md
docs/core-concepts/: agents.md  overview.md  search-ranking.md  spatial-memory.md  teams-and-workspaces.md
docs/examples/: basic-usage.md  cluster-index-query.md  cluster-short-term-only.md  fastapi-multiuser-app-integration.md  memory-search.md  meta_queries.md  multiagent-shared-memory-integration.md  overview.md  personal-diary-assistant.md  researcher-agent.md  simple-multiuser-integration.md  smart-shopping-assistant.md  travel-planner.md
docs/getting-started/: basic-usage.md  governance-plain-language.md  installation.md  quick-start.md  shared-memory-plain-language.md
docs/integrations/: openai_client.md  overview.md
docs/open-source/: architecture.md  evaluation-datasets.md  exporting.md  features.md  roadmap_task_breakdown.md
docs/overrides/: main.html
docs/sdk/: policy-client.md
examples/: README.md  advanced_config.py  auto_ingest_example.py  basic_usage.py  conscious_ingestion_demo.py  evaluation_quickstart.json  evaluation_quickstart.py  memoria.json  memoria_example.py  memory_retrieval_example.py  personal_assistant.py  personal_assistant_advanced.py
examples/databases/: mysql_demo.py  postgres_demo.py  sqlite_demo.py
examples/integrations/: agentops_example.py  agno_example.py  azure_ai_foundry_example.py  crewai_example.py  digital_ocean_example.py  langchain_example.py  openai_agent_example.py  swarms_example.py
examples/multiple-agents/: multiagent_shared_memory.py
examples/multiple-users/: README.md  fastapi_multiuser_app.py  simple_multiuser.py
examples/supported_llms/: azure_example.py  litellm_example.py  ollama_example.py  openai_example.py
http:/: plan.md
memoria/: __init__.py  cli.py
memoria/agents/: __init__.py  conscious_agent.py  memory_agent.py  retrieval_agent.py  search_executor.py  search_planner.py  search_prompts.py
memoria/api/: __init__.py
memoria/cli_support/: __init__.py  benchmark_runner.py  evaluation_scaffold.py  governance.py  heuristic_clusters.py  index_clusters.py  migration_runner.py  policy_tooling.py
memoria/config/: __init__.py  bootstrap.py  manager.py  memory_manager.py  settings.py
memoria/conscious/: __init__.py  constants.py  manager.py
memoria/core/: __init__.py  context_injection.py  context_orchestration.py  conversation.py  database.py  initialization.py  interceptors.py  memory.py  provider_setup.py  providers.py
memoria/database/: __init__.py  analytics.py  auto_creator.py  backup_guard.py  connection_utils.py  migration.py  models.py  query_translator.py  search_service.py  sqlalchemy_manager.py  sqlite_utils.py
memoria/evaluation/: __init__.py  datasets.py  loader.py  spec.py
memoria/heuristics/: conversation_ingest.py  ingestion.py  manual_promotion.py  retention.py
memoria/integrations/: __init__.py  anthropic_integration.py  litellm_integration.py  openai_client.py  openai_integration.py
memoria/plugins/: __init__.py
memoria/policy/: __init__.py  enforcement.py  roster.py  schemas.py  utils.py
memoria/providers/: __init__.py  anthropic_recorder.py  openai_recorder.py
memoria/rituals/: __init__.py  coordinate_audit.py
memoria_api/: __init__.py
memoria_server/: __init__.py
scripts/: README.md  backup_database.py  docs.bat  docs.sh  docs_dev.py  export_memories.py  generate_openapi.py  heuristic_clusters.py  import_memories.py  index_clusters.cron  index_clusters.py  manual_memory.py  recalculate_weights.py  run_local.py  show_dashboard.py  transpile_dashboard_jsx.py
tests/: README.md  __init__.py  comprehensive_database_comparison.py  config.json  conftest.py  test_admin_routes.py  test_agent_permissions.py  test_analytics.py  test_anchor_route.py  test_api_key_auth.py  test_api_structure.py  test_auto_ingest_system_prompt.py  test_chat_id_linking.py  test_cli.py  test_cli_entrypoint_installation.py  test_cli_teams.py  test_cli_workspaces.py  test_cluster_centroids.py  test_cluster_index.py  test_clusters_endpoint.py  test_compound_search.py  test_config_settings.py  test_coordinate_audit.py  test_hypertext_graph_schema.py  test_index_clusters_fetch_texts.py  test_memoria_provider_configuration.py  test_memory_manager.py  test_memory_relationships.py  test_memory_tool.py  test_missing_column_repair.py  test_missing_db_tables_creation.py  test_module_imports.py  test_policy_routes.py  test_policy_schemas.py  test_privacy_retention_integration.py  test_processed_memory_serialization.py  test_provider_routing.py  test_pydantic_compat.py  test_query_cluster_index.py  test_retention_service.py  (+16 more)
(+211 files in other folders)
