[build-system]
requires = ["setuptools>=64", "wheel", "poetry-core"]
build-backend = "setuptools.build_meta"

[project]
name = "memoriasdk"
version = "0.9.0a0"
description = "The Open-Source Memory Layer for AI Agents & Multi-Agent Systems"
authors = [
    {name = "Memoria Community Maintainers", email = "maintainers@memoria.dev"},
    {name = "Adrian Hau"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "memory", "agents", "llm", "artificial-intelligence", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

dependencies = [
    "flask>=2.3.0",
    "flask-cors>=3.0.0",
    "itsdangerous>=2.1.0",
    "loguru>=0.6.0",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "jsonschema>=4.0.0",
    "apscheduler>=3.10.1",
    "rapidfuzz>=3.0.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.9.0",
    "mypy>=1.0",
    "pre-commit>=2.15",
    "types-PyYAML>=6.0.0",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=0.18.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.1",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
]

# Database drivers
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]
databases = ["psycopg2-binary>=2.9.0", "mysql-connector-python>=8.0.0"]

# Synchronization backends
sync = ["redis>=4.0"]

# AI/LLM integrations
anthropic = ["anthropic>=0.3.0"]
litellm = ["litellm>=1.0.0"]
integrations = [
    "litellm>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.5.0",
]

# Clustering dependencies
cluster = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.5.1",
    "scikit-learn>=1.4.0",
    "textblob>=0.17.1",
]

# Demo/example dependencies
demos = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
]

# Benchmarking and report exports
benchmark = [
    "pyarrow>=14.0.0",
]

# All optional dependencies
all = [
    # Dev tools
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.9.0",
    "mypy>=1.0",
    "pre-commit>=2.15",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=0.18.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.1",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
    # Database drivers
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    # Synchronization
    "redis>=4.0",
    # AI integrations
    "litellm>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.5.0",
    # Clustering
    "numpy>=1.24.0",
    "sentence-transformers>=2.5.1",
    "scikit-learn>=1.4.0",
    "textblob>=0.17.1",
    # Demo dependencies
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    # Benchmarking
    "pyarrow>=14.0.0",
]

[project.urls]
Homepage = "https://memoria.dev/"
Documentation = "https://docs.memoria.dev/"
Repository = "https://github.com/Founder-ArcaFutura/Memoria"
"Bug Tracker" = "https://github.com/Founder-ArcaFutura/Memoria/issues"
"Changelog" = "https://github.com/Founder-ArcaFutura/Memoria/blob/main/CHANGELOG.md"
"Contributing" = "https://github.com/Founder-ArcaFutura/Memoria/blob/main/CONTRIBUTING.md"

[project.scripts]
memoria = "memoria.cli:main"

[tool.setuptools.packages.find]
include = ["memoria*", "memoria_api*", "memoria_server*"]
exclude = ["tests*", "docs*", "examples*", "archive*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
memoria = ["py.typed", "*.json", "*.sql"]
memoria_server = [
    "dashboard/*.html",
    "dashboard/*.js",
    "dashboard/*.css",
    "dashboard/*.map",
]
"*" = ["configurations/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "archive",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B904",  # exception chaining - would require significant refactoring
    "E722",  # bare except in legacy database code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B018", "B017"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["memoria", "tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = ["archive/", "build/", "dist/"]
files = ["memoria/core/memory.py", "memoria/storage/service.py"]
follow_imports = "skip"
allow_untyped_globals = false
strict = true


[[tool.mypy.overrides]]
module = "memoria.conscious.manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.database.search_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.database.connectors.mysql_connector"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.database.queries.cluster_queries"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.database"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.schemas"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.utils.query_builder"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.heuristics.retention"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.agents.search_executor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "memoria.tools.memory_tool"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
norecursedirs = []
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests that require an asyncio event loop",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["memoria"]
omit = [
    "*/tests/*",
    "*/test_*",
    "archive/*",
    "examples/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "archive", "examples"]
skips = ["B101", "B601"]
